product module and menubar

--- a/src/app/shared/components/menu/menu.component.html
+++ b/src/app/shared/components/menu/menu.component.html
@@ -1,5 +1,3 @@
 <p-menubar [model]="menuItems">
-  <ng-template pTemplate="end">
-
-  </ng-template>
+  <img src="../../../../favicon.ico" alt="Icono">
 </p-menubar>
