--- a/src/app/products/pages/basics-page/basics-page.component.html
+++ b/src/app/products/pages/basics-page/basics-page.component.html
@@ -1,1 +1,24 @@
-<p>basics-page works!</p>
+<p-panel header="Info" [showHeader]="false">
+  <h1>Pipes basicos</h1>
+  <p>
+    Pipes included in the common module
+  </p>
+</p-panel>
+
+<div class="p-grid">
+  <div class="p-col-4">
+    <p-card header="uppercase">
+      {{ nameLower | uppercase }}
+    </p-card>
+  </div>
+  <div class="p-col-4">
+    <p-card header="lowercase">
+      {{ nameUpper | lowercase }}
+    </p-card>
+  </div>
+  <div class="p-col-4">
+    <p-card header="titlecase">
+      {{ fullName | titlecase}}
+    </p-card>
+  </div>
+</div>
