fix in basics page

--- a/src/app/products/pages/basics-page/basics-page.component.html
+++ b/src/app/products/pages/basics-page/basics-page.component.html
@@ -1,11 +1,10 @@
-<p-panel header="Info" [showHeader]="false">
-  <h1>Pipes basicos</h1>
+<p-panel header="Pipes basicos" [showHeader]="true" class="p-1">
   <p>
     Pipes included in the common module
   </p>
 </p-panel>
 
-<div class="grid mt-2">
+<div class="grid">
   <div class="col-4">
     <p-card header="uppercase">
       {{ nameLower | uppercase }}
