adding new pipe for date

--- a/src/app/products/pages/basics-page/basics-page.component.html
+++ b/src/app/products/pages/basics-page/basics-page.component.html
@@ -33,7 +33,7 @@
         <li>Fecha pipe short</li>
         <li>Fecha pipe long</li>
         <li>Fecha MES</li>
-        <li>MMMM dd, yyyy</li>
+        <li>customDate | date:'MMMM dd, yyyy'</li>
       </ol>
       <hr>
       <ol>
