--- a/src/app/products/pages/basics-page/basics-page.component.html
+++ b/src/app/products/pages/basics-page/basics-page.component.html
@@ -39,6 +39,7 @@
       <ol>
         <li>customDate | date:'long':'GMT-5'</li>
         <li>customDate | date:'long':'GMT-6'</li>
+        <li>customDate | date:'long':'':'es-EC'</li>
       </ol>
     </p-card>
   </div>
@@ -56,8 +57,8 @@
       <ol>
         <li>{{ customDate | date:'long':'GMT-5'}}</li>
         <li>{{ customDate | date:'long':'GMT-6'}}</li>
+        <li>{{ customDate | date:'long':'':'es-EC'}}</li>
       </ol>
-
     </p-card>
   </div>
 </div>
