--- a/src/app/products/pages/basics-page/basics-page.component.html
+++ b/src/app/products/pages/basics-page/basics-page.component.html
@@ -40,6 +40,8 @@
         <li>customDate | date:'long':'GMT-5'</li>
         <li>customDate | date:'long':'GMT-6'</li>
         <li>customDate | date:'long':'':'es-EC'</li>
+        <li>customDate | date:'long':'':'en-US'</li>
+        <li>customDate | date:'long':'':'fr-CA'</li>
       </ol>
     </p-card>
   </div>
@@ -58,6 +60,8 @@
         <li>{{ customDate | date:'long':'GMT-5'}}</li>
         <li>{{ customDate | date:'long':'GMT-6'}}</li>
         <li>{{ customDate | date:'long':'':'es-EC'}}</li>
+        <li>{{ customDate | date:'long':'':'en-US'}}</li>
+        <li>{{ customDate | date:'long':'':'fr-CA'}}</li>
       </ol>
     </p-card>
   </div>
