--- a/src/app/products/pages/numbers-page/numbers-page.component.html
+++ b/src/app/products/pages/numbers-page/numbers-page.component.html
@@ -1,1 +1,23 @@
-<p>numbers-page works!</p>
+<p-panel header="Pipes numericos" [showHeader]="true" class="p-1">
+  <p>
+    Pipes included in the common module
+  </p>
+</p-panel>
+
+<div class="grid">
+  <div class="col-12 md:col-6">
+    <p-card header="Ventas Netas">
+      {{ totalSales+1235 | number:'1.2-2' }}
+    </p-card>
+  </div>
+  <div class="col-12 md:col-6">
+    <p-card header="Ventas Brutas">
+      {{ totalSales | currency:'HNL':'symbol-narrow':'1.0-4'}}
+    </p-card>
+  </div>
+  <div class="col-12 md:col-6">
+    <p-card header="Ganancia porcentual">
+      {{ percent | percent:'1.2-2'}}
+    </p-card>
+  </div>
+</div>
