--- a/src/app/products/pages/uncommon-page/uncommon-page.component.html
+++ b/src/app/products/pages/uncommon-page/uncommon-page.component.html
@@ -1,1 +1,12 @@
-<p>uncommon-page works!</p>
+<p-panel header="Pipes no tan comunes" [showHeader]="true" class="p-1">
+  <p>
+    Pipes included in the common module
+  </p>
+</p-panel>
+<div class="grid">
+  <div class="col-12 md:col-6">
+    <p-fieldset legend="i18nSelect Pipe">
+
+    </p-fieldset>
+  </div>
+</div>
