--- a/src/app/products/pages/uncommon-page/uncommon-page.component.html
+++ b/src/app/products/pages/uncommon-page/uncommon-page.component.html
@@ -11,13 +11,16 @@
       (click)="changeClient()"
       label="Cambiar persona"
       >
-
       </p-button>
     </p-fieldset>
   </div>
   <div class="col-12 md:col-6">
     <p-fieldset legend="i18nPlural Pipe" [toggleable]="true">
-
+      <p>Actualmente {{clients.length  | i18nPlural: clientsMap}}</p>
+      <p-button
+      label="Despachar"
+      (click)="deleteClient()"
+      ></p-button>
     </p-fieldset>
   </div>
   <div class="col-12 md:col-6">
