--- a/src/app/products/pages/uncommon-page/uncommon-page.component.html
+++ b/src/app/products/pages/uncommon-page/uncommon-page.component.html
@@ -25,7 +25,21 @@
   </div>
   <div class="col-12 md:col-6">
     <p-fieldset legend="Slice Pipe" [toggleable]="true">
+      <b>Orginal</b>
+      <pre>{{clients}}</pre>
 
+      <b>Slice:0:2</b>
+      <pre>{{clients | slice:0:2}}</pre>
+
+      <b>Slice:1:2</b>
+      <pre>{{clients | slice:1:2}}</pre>
+
+      <b>Slice:3:4</b>
+      <pre>{{clients | slice:3:4}}</pre>
+
+      <b>Slice:0:-1</b>
+      <p>Con valores negativos empieza a eliminar desde la ultima posicion</p>
+      <pre>{{clients | slice:0:-1}}</pre>
     </p-fieldset>
   </div>
   <div class="col-12 md:col-6">
