--- a/src/app/products/pages/uncommon-page/uncommon-page.component.html
+++ b/src/app/products/pages/uncommon-page/uncommon-page.component.html
@@ -59,6 +59,12 @@
   <div class="col-12 md:col-6">
     <p-fieldset legend="Async Pipe" [toggleable]="true">
 
+      <pre *ngIf="!(myObservable | async)">Resolviendo observable</pre>
+      <pre>{{ myObservable | async}}</pre>
+
+      <pre *ngIf="!(promiseValue | async)">Resolviendo promesa</pre>
+      <pre>{{ promiseValue | async}}</pre>
+
     </p-fieldset>
   </div>
 </div>
