custom made pipe to upper case

--- a/src/app/products/pages/order/order.component.html
+++ b/src/app/products/pages/order/order.component.html
@@ -1,5 +1,5 @@
 <p-panel header="Pipes personalizados" [showHeader]="true" class="p-1">
   <p>
-    Pipes personalizados - creados por el desarrollador
+    Pipes personalizados - creados por el {{'desarrollador' | toggleCase}}
   </p>
 </p-panel>
