--- a/src/app/products/pages/order/order.component.html
+++ b/src/app/products/pages/order/order.component.html
@@ -1,5 +1,29 @@
 <p-panel header="Pipes personalizados" [showHeader]="true" class="p-1">
   <p>
-    Pipes personalizados - creados por el {{'desarrollador' | toggleCase}}
+    Pipes personalizados - creados por el {{'desarrollador' | toggleCase:true}}
   </p>
 </p-panel>
+<p-toolbar>
+  <div class="p-toolbar-group-start">
+    <p-button label="ToggleCase" icon="pi pi-search" class="mr-2"></p-button>
+  </div>
+  <div class="p-toolbar-group-end">
+
+      <p-button class="mr-2"
+                label="Por nombre"
+                icon="pi pi-sort"
+                styleClass="p-button-success">
+      </p-button>
+      <p-button class="mr-2"
+                label="Por volar"
+                icon="pi pi-sort"
+                styleClass="p-button-danger">
+      </p-button>
+      <p-button class="mr-2"
+                label="Por Color"
+                icon="pi pi-sort"
+                styleClass="p-button-help">
+      </p-button>
+
+  </div>
+</p-toolbar>
