--- a/src/app/products/pages/order/order.component.html
+++ b/src/app/products/pages/order/order.component.html
@@ -1,11 +1,14 @@
 <p-panel header="Pipes personalizados" [showHeader]="true" class="p-1">
   <p>
-    Pipes personalizados - creados por el {{'desarrollador' | toggleCase:true}}
+    Pipes personalizados - creados por el {{'desarrollador' | toggleCase:isUpperCase}}
   </p>
 </p-panel>
 <p-toolbar>
   <div class="p-toolbar-group-start">
-    <p-button label="ToggleCase" icon="pi pi-search" class="mr-2"></p-button>
+    <p-button label="ToggleCase"
+              icon="pi pi-search"
+              class="mr-2"
+              (onClick)="toggleUpperCase()"></p-button>
   </div>
   <div class="p-toolbar-group-end">
 
