--- a/src/app/products/pages/order/order.component.html
+++ b/src/app/products/pages/order/order.component.html
@@ -30,3 +30,23 @@
 
   </div>
 </p-toolbar>
+
+
+<p-panel header="Heroes">
+  <p-table [value]="heroes" [tableStyle]="{ 'min-width': '50rem' }">
+    <ng-template pTemplate="header">
+        <tr>
+            <th>Name</th>
+            <th>Vuela</th>
+            <th>Color</th>
+        </tr>
+    </ng-template>
+    <ng-template pTemplate="body" let-hero>
+        <tr>
+            <td>{{ hero.name }}</td>
+            <td>{{ hero.canFly }}</td>
+            <td>{{ hero.color }}</td>
+        </tr>
+    </ng-template>
+  </p-table>
+</p-panel>
