--- a/src/app/products/pages/order/order.component.html
+++ b/src/app/products/pages/order/order.component.html
@@ -33,7 +33,7 @@
 
 
 <p-panel header="Heroes">
-  <p-table [value]="heroes" [tableStyle]="{ 'min-width': '50rem' }">
+  <p-table [value]="heroes | sortBy:'name'" [tableStyle]="{ 'min-width': '50rem' }">
     <ng-template pTemplate="header">
         <tr>
             <th>Name</th>
