--- a/src/app/products/pages/order/order.component.html
+++ b/src/app/products/pages/order/order.component.html
@@ -14,16 +14,19 @@
 
       <p-button class="mr-2"
                 label="Por nombre"
+                (onClick)="changeOrder('name')"
                 icon="pi pi-sort"
                 styleClass="p-button-success">
       </p-button>
       <p-button class="mr-2"
                 label="Por volar"
+                (onClick)="changeOrder('canFly')"
                 icon="pi pi-sort"
                 styleClass="p-button-danger">
       </p-button>
       <p-button class="mr-2"
                 label="Por Color"
+                (onClick)="changeOrder('color')"
                 icon="pi pi-sort"
                 styleClass="p-button-help">
       </p-button>
@@ -33,7 +36,7 @@
 
 
 <p-panel header="Heroes">
-  <p-table [value]="heroes | sortBy:'name'" [tableStyle]="{ 'min-width': '50rem' }">
+  <p-table [value]="heroes | sortBy:orderBy" [tableStyle]="{ 'min-width': '50rem' }">
     <ng-template pTemplate="header">
         <tr>
             <th>Name</th>
